--- a/FinalChallengeApp/View/Materials.storyboard
+++ b/FinalChallengeApp/View/Materials.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MUY-hO-l3I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MUY-hO-l3I">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -113,7 +113,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="vdw-ZA-0fR">
-                                    <rect key="frame" x="0.0" y="363.5" width="414" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="363" width="414" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 </view>
@@ -179,10 +179,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="addNewCell" id="zra-uJ-Aam" customClass="AddActivityTableViewCell" customModule="FinalChallengeApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="290" width="414" height="45.5"/>
+                                        <rect key="frame" x="0.0" y="290" width="414" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zra-uJ-Aam" id="37K-i8-Qk4">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="45.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="plA-SG-ffk">
@@ -193,7 +193,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add New Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PqV-Ul-xDK">
-                                                    <rect key="frame" x="55" y="12" width="343" height="21.5"/>
+                                                    <rect key="frame" x="55" y="12" width="343" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -686,7 +686,7 @@
         <!--Edit Materials View Controller-->
         <scene sceneID="b4m-1k-OKy">
             <objects>
-                <viewController id="Xpo-RV-2Og" customClass="EditMaterialsViewController" customModule="FinalChallengeApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="Xpo-RV-2Og" customClass="EditMaterialsViewController" customModule="FinalChallengeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2tY-Xz-4JU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -771,11 +771,25 @@
                                     <outlet property="delegate" destination="Xpo-RV-2Og" id="opy-0d-lIh"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NC8-c9-fMe">
+                                <rect key="frame" x="0.0" y="829" width="414" height="33"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <state key="normal" title="Add New Category">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="newCategoryTapped:" destination="Xpo-RV-2Og" eventType="touchUpInside" id="6jp-th-CUY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="NC8-c9-fMe" firstAttribute="leading" secondItem="hVz-Ar-imm" secondAttribute="leading" id="8wo-ac-IxL"/>
+                            <constraint firstItem="hVz-Ar-imm" firstAttribute="trailing" secondItem="NC8-c9-fMe" secondAttribute="trailing" id="Acu-KV-fEJ"/>
                             <constraint firstItem="tBG-E5-9w4" firstAttribute="leading" secondItem="hVz-Ar-imm" secondAttribute="leading" constant="16" id="El9-kc-8B4"/>
                             <constraint firstItem="tBG-E5-9w4" firstAttribute="top" secondItem="hVz-Ar-imm" secondAttribute="top" constant="16" id="U1F-gK-YXX"/>
+                            <constraint firstItem="hVz-Ar-imm" firstAttribute="bottom" secondItem="NC8-c9-fMe" secondAttribute="bottom" id="VgA-Q3-wr1"/>
                             <constraint firstItem="hVz-Ar-imm" firstAttribute="bottom" secondItem="tBG-E5-9w4" secondAttribute="bottom" constant="16" id="aLa-8T-Qe0"/>
                             <constraint firstItem="hVz-Ar-imm" firstAttribute="trailing" secondItem="tBG-E5-9w4" secondAttribute="trailing" constant="16" id="bM9-uy-0UH"/>
                         </constraints>
@@ -790,6 +804,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="tBG-E5-9w4" id="Zsn-Tl-Lpz"/>
+                        <outlet property="newCategoryButton" destination="NC8-c9-fMe" id="8fh-Gc-CLl"/>
                         <segue destination="Ey5-5w-Z8j" kind="presentation" identifier="showAddSkill" id="CTx-BJ-VB4"/>
                         <segue destination="Gx7-fu-YbS" kind="unwind" identifier="backToMaterialsFromEditMaterials" unwindAction="unwindFromEditMaterials:" id="Xth-OF-Tvy"/>
                     </connections>
@@ -797,7 +812,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GdA-oU-Jwe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Gx7-fu-YbS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3232" y="-25"/>
+            <point key="canvasLocation" x="3231.884057971015" y="-25.446428571428569"/>
         </scene>
         <!--New Skill View Controller-->
         <scene sceneID="ZPc-iq-dEh">
