--- a/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
+++ b/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -235,9 +235,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oHG-nK-2Lo">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oHG-nK-2Lo">
+                                <rect key="frame" x="0.0" y="129" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="ksO-kB-dUU">
+                                    <rect key="frame" x="0.0" y="239" width="414" height="192"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4UY-FV-2Ts">
+                                            <rect key="frame" x="16" y="76" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="Bjl-2i-W5F"/>
+                                                <constraint firstAttribute="width" constant="100" id="Ud1-DK-8NM"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6IV-9B-xfp">
+                                            <rect key="frame" x="16" y="16" width="382" height="44"/>
+                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" title="Play"/>
+                                            <connections>
+                                                <action selector="playAct:" destination="81m-JS-Wsw" eventType="touchUpInside" id="soi-IJ-yBB"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="6IV-9B-xfp" secondAttribute="trailing" constant="16" id="82W-DJ-RWe"/>
+                                        <constraint firstItem="6IV-9B-xfp" firstAttribute="top" secondItem="ksO-kB-dUU" secondAttribute="top" constant="16" id="9G1-V2-hZE"/>
+                                        <constraint firstItem="4UY-FV-2Ts" firstAttribute="leading" secondItem="ksO-kB-dUU" secondAttribute="leading" constant="16" id="NK1-xX-h79"/>
+                                        <constraint firstAttribute="bottom" secondItem="4UY-FV-2Ts" secondAttribute="bottom" constant="16" id="SWJ-AL-mM9"/>
+                                        <constraint firstItem="6IV-9B-xfp" firstAttribute="leading" secondItem="ksO-kB-dUU" secondAttribute="leading" constant="16" id="eH9-Jo-RuK"/>
+                                        <constraint firstItem="4UY-FV-2Ts" firstAttribute="top" secondItem="6IV-9B-xfp" secondAttribute="bottom" constant="16" id="pk2-Nc-Z3X"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="128" id="QzZ-Fx-GzO" customClass="DetailTableViewCell" customModule="Stara" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="128"/>
@@ -339,6 +369,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Report's Detail" id="NzN-Bs-da4"/>
                     <connections>
+                        <outlet property="audioAttachmentButton" destination="6IV-9B-xfp" id="nlc-xi-1c7"/>
+                        <outlet property="imageAttachment" destination="4UY-FV-2Ts" id="GZa-Eo-p3x"/>
                         <outlet property="tableView" destination="oHG-nK-2Lo" id="Y7J-7b-Q6f"/>
                         <segue destination="eOn-S4-O2o" kind="presentation" identifier="showViewDetailReport" id="fKL-GA-MgF"/>
                     </connections>
@@ -482,19 +514,18 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="9Dm-lq-d6h">
-                                    <rect key="frame" x="0.0" y="460" width="414" height="213"/>
+                                    <rect key="frame" x="0.0" y="460" width="414" height="192"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H5r-nS-TLx">
-                                            <rect key="frame" x="16" y="97" width="100" height="100"/>
+                                            <rect key="frame" x="16" y="76" width="100" height="100"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="100" id="2A4-fq-qKK"/>
                                                 <constraint firstAttribute="width" constant="100" id="BA1-qj-Nhd"/>
                                             </constraints>
                                         </imageView>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IRw-X8-9Fi">
-                                            <rect key="frame" x="16" y="16" width="390" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IRw-X8-9Fi">
+                                            <rect key="frame" x="16" y="16" width="382" height="44"/>
                                             <color key="tintColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <state key="normal" title="Play">
                                                 <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -507,7 +538,11 @@
                                     <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="H5r-nS-TLx" secondAttribute="bottom" constant="16" id="7af-RL-Hfz"/>
+                                        <constraint firstItem="IRw-X8-9Fi" firstAttribute="top" secondItem="9Dm-lq-d6h" secondAttribute="top" constant="16" id="DyZ-m1-UE8"/>
                                         <constraint firstItem="H5r-nS-TLx" firstAttribute="leading" secondItem="9Dm-lq-d6h" secondAttribute="leading" constant="16" id="K9F-QW-mZt"/>
+                                        <constraint firstItem="H5r-nS-TLx" firstAttribute="top" secondItem="IRw-X8-9Fi" secondAttribute="bottom" constant="16" id="NfD-n9-bAz"/>
+                                        <constraint firstItem="IRw-X8-9Fi" firstAttribute="leading" secondItem="9Dm-lq-d6h" secondAttribute="leading" constant="16" id="o9T-gJ-65h"/>
+                                        <constraint firstAttribute="trailing" secondItem="IRw-X8-9Fi" secondAttribute="trailing" constant="16" id="wGT-7g-kj0"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
@@ -601,11 +636,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="sU4-24-Fyn">
-                                                    <rect key="frame" x="16" y="16.5" width="24" height="22"/>
+                                                    <rect key="frame" x="16" y="16.5" width="24" height="22.5"/>
                                                     <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mic.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="aaj-Vg-5Zf">
-                                                    <rect key="frame" x="56" y="15.5" width="17" height="24"/>
+                                                    <rect key="frame" x="56" y="15.5" width="16" height="24"/>
                                                     <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                             </subviews>
@@ -1097,6 +1132,6 @@
     <resources>
         <image name="Unchecked box" width="36" height="36"/>
         <image name="camera.fill" catalog="system" width="64" height="48"/>
-        <image name="mic.fill" catalog="system" width="54" height="64"/>
+        <image name="mic.fill" catalog="system" width="50" height="64"/>
     </resources>
 </document>
